# jwalk

./: Cargo.toml
data/: mountain_i18n.csv  mountains.csv  region_i18n.csv  regions.csv
data/locales/: en.yaml  jp.yaml
ui/: Cargo.toml  Makefile.toml  index.html
ui/components/sort_button/: Cargo.toml
ui/components/sort_button/src/: lib.rs
ui/src/: app.rs  context.rs  error.rs  main.rs  util.rs
ui/src/data_source/: csv.rs  mod.rs
ui/src/model/: difficulty_rating.rs  locale.rs  meter.rs  mod.rs  mountain.rs  region.rs  translation_key.rs
ui/src/unit/: mod.rs
ui/src/views/: mod.rs  not_found.rs  table.rs
