[workspace]
members = ["ui"]
resolver = "2"

[workspace.dependencies]
csv = { version = "1.3.1", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
leptos = { version = "0.7.4", default-features = false, features = ["csr"] }
serde = { version = "1.0.217", default-features = false }
thaw = { version = "0.4.2", default-features = false, features = ["csr"]}
thiserror = { version = "2.0.11", default-features = false }
