[workspace]
members = [
    "ui",
    "ui/components/sort_button"
    ]
resolver = "2"

[workspace.dependencies]
csv = { version = "1.3.1", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
gloo-console ={ version = "0.3.0", default-features = false }
icondata = { version = "0.5.0", default-features = false, features = ["bootstrap-icons"]}
leptos = { version = "0.7.5", default-features = false, features = ["csr"] }
serde = { version = "1.0.217", default-features = false }
thaw = { version = "0.4.2", default-features = false, features = ["csr"]}
thaw_utils ={ version = "0.1.1", default-features = false, features = ["csr"]}
thiserror = { version = "2.0.11", default-features = false }
web-sys = {version = "0.3.77", default-features = false, features = ["Navigator", "Window"]}
