[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "The ui components of jwalk"

[dependencies]
console_error_panic_hook = { workspace = true }
csv = { workspace = true }
leptos = { workspace = true }
serde = { workspace = true }
thaw = { workspace = true }
thiserror = { workspace = true }
