[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "The ui components of jwalk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toadslop/jwalk.git"
readme = "./README.md"
keywords = ["webapp"]
categories = ["wasm"]

[dependencies]
console_error_panic_hook = { workspace = true }
csv = { workspace = true }
gloo-console = { workspace = true }
icondata = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
rust-i18n = { workspace = true }
serde = { workspace = true }
sort_button = { path = "./components/sort_button" }
strum = { workspace = true }
thaw = { workspace = true }
thiserror = { workspace = true }
web-sys = { workspace = true }
