[package]
name = "sort_button"
version = "0.1.0"
edition = "2021"
description = "Sort button component built with Thaw"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toadslop/jwalk.git"
readme = "../README.md"
keywords = ["component", "wasm"]
categories = ["wasm"]

[dependencies]
leptos = { workspace = true }
icondata = { workspace = true }
thaw = { workspace = true }
thaw_utils = { workspace = true }
